#47 Fix overflow and tab selection issues

--- a/projects/composition/src/app/pages/tab-group-page/tab-group-page.component.scss
+++ b/projects/composition/src/app/pages/tab-group-page/tab-group-page.component.scss
@@ -4,7 +4,7 @@
     justify-content: center;
   }
   .tab-content {
-    margin: 15px 250px;
+    margin: 15px 20%;
   }
 }
 
@@ -13,4 +13,8 @@
     align-items: end;
     justify-content: right;
   }
+}
+
+:host {
+  overflow: hidden;
 }
